# ariadne-dns

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: tests.yml
assets/example.com./: a.example.com.  b.example.com.  example.com.  example.com._include_2
assets/messages/: query_packet_bin.txt  query_packet_hex.txt  response_packet_bin.txt  response_packet_hex.txt
assets/zones/example.com./: example.com.  example.com._include_1
conf/: nameserver.conf.json  resolver.conf.json
src/: lib.rs
src/nameserver/: conf.rs  handler.rs  mod.rs
src/nameserver/zones/: errors.rs  mod.rs  parser.rs  parser_auth.rs  parser_sub.rs  tokens.rs  utils.rs
src/resolver/: conf.rs  handler.rs  mod.rs  todo.md
src/resolver/back_end/: cache.rs  errors.rs  mod.rs  recursive.rs  requests.rs  trace.rs  utils.rs
src/shared/: log.rs  logs.rs  mod.rs  thread_pool.rs
src/shared/buffer/: buffer.rs  mod.rs  tests.rs
src/shared/dns/: class.rs  errors.rs  header.rs  message.rs  mod.rs  name.rs  questions.rs  records.rs  types.rs  utils.rs
src/shared/net/: mod.rs  setup.rs  tcp_server.rs  traits.rs  udp_server.rs
