[package]
name = "ariadne-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rand = "0.8.4"
colored = "2"
chrono = "0.4.19"
log = { version = "0.4.17", features = ["serde"] }
simple_logger = "2.2.0"
